--- a/NoSympathy Guild Panel/Models/Models.vbproj
+++ b/NoSympathy Guild Panel/Models/Models.vbproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Guild.vb" />
+    <Compile Include="Member.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
