--- a/NoSympathy Guild Panel/APIControllers/APIControllers.vbproj
+++ b/NoSympathy Guild Panel/APIControllers/APIControllers.vbproj
@@ -66,7 +66,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Guild.vb" />
+    <Compile Include="AccountControllers.vb" />
+    <Compile Include="BaseController.vb" />
+    <Compile Include="GuildController.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -82,6 +84,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="WorldController.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -107,6 +110,10 @@
     <ProjectReference Include="..\APICore\APICore.vbproj">
       <Project>{7B59FDD5-3150-4CB2-8D90-CE5F6B6D2CDA}</Project>
       <Name>APICore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Models\Models.vbproj">
+      <Project>{3f3158ae-88b8-4f7a-ba54-16611537e2e3}</Project>
+      <Name>Models</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
