--- a/NoSympathy Guild Panel/Models/Models.vbproj
+++ b/NoSympathy Guild Panel/Models/Models.vbproj
@@ -108,6 +108,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PVPSTATS.vb" />
     <Compile Include="World.vb" />
     <Compile Include="WvW.vb" />
   </ItemGroup>
