--- a/NoSympathy Guild Panel/APIControllers/APIControllers.vbproj
+++ b/NoSympathy Guild Panel/APIControllers/APIControllers.vbproj
@@ -127,7 +127,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="PvPSTATDISPLAY.vb" />
+    <Compile Include="pvpconfigurations.vb" />
     <Compile Include="WorldController.vb" />
   </ItemGroup>
   <ItemGroup>
