--- a/NoSympathy Guild Panel/Models/Models.vbproj
+++ b/NoSympathy Guild Panel/Models/Models.vbproj
@@ -88,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Crafting.vb" />
+    <Compile Include="EngineResponse.vb" />
     <Compile Include="mapArrays.vb" />
     <Compile Include="Account.vb" />
     <Compile Include="Guild.vb" />
